<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="0dp"
            android:layout_height="192dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:drawable/screen_background_light" />
    </LinearLayout>


    <EditText
        android:id="@+id/editText"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="211dp"
        android:ems="10"
        android:hint="@string/edit_description"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="379dp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/editText4"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/edit_room_number"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText5"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/edit_house_number"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="379dp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/editText6"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_house_street"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="379dp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/editText"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_house_poscode"
        tools:ignore="LabelFor" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorPrimaryDark"
        app:elevation="0dp"
        app:srcCompat="@android:drawable/ic_menu_save"
        tools:ignore="RelativeOverlap" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/float4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorPrimaryDark"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/add_change_photo" />


</RelativeLayout>