<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="0dp"
            android:layout_height="192dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@android:drawable/screen_background_light" />
    </LinearLayout>


    <EditText
        android:id="@+id/descip"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/add_description"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/roomName"
        android:layout_width="379dp"
        android:layout_height="wrap_content"

        android:layout_below="@+id/houseNumber"
        android:ems="10"
        android:hint="@string/add_room_number"
        android:inputType="number"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/houseNumber"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/street"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/add_house_number"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/street"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postCode"
        android:ems="10"
        android:hint="@string/add_house_street"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/postCode"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descip"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/add_house_poscode"
        tools:ignore="LabelFor" />



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"


        android:clickable="true"
        app:backgroundTint="@color/colorPrimaryDark"
        app:elevation="0dp"
        app:srcCompat="@android:drawable/ic_menu_save"
        android:focusable="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"


        android:clickable="true"
        app:backgroundTint="@color/colorPrimaryDark"
        app:srcCompat="@android:drawable/ic_menu_delete"
        android:focusable="true" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="Add/Change Photo" />


</RelativeLayout>